# learn-android

./: build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/cn/leicixiang/leitest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native_lib.c
app/src/main/java/: cn_leicixiang_leitest_myJNI.h
app/src/main/java/cn/leicixiang/leitest/: LoginActivity.java  Main2Activity.java  myJNI.java
app/src/main/java/cn/leicixiang/leitest/bean/: APIInterface.java  TestModel.java  UserBean.java
app/src/main/java/cn/leicixiang/leitest/model/: IUserModel.java  UserModel.java
app/src/main/java/cn/leicixiang/leitest/presenter/: UserPresenter.java
app/src/main/java/cn/leicixiang/leitest/view/: IUserView.java  UserAcitivity.java
app/src/main/res/layout/: activity_login.xml  activity_main.xml  activity_main2.xml  activity_user_acitivity.xml  content_main2.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cn/leicixiang/leitest/: ExampleUnitTest.java
backend/: build.gradle
backend/src/main/java/com/example/leicixiang/myapplication/backend/: MyBean.java  MyEndpoint.java
gradle/wrapper/: gradle-wrapper.properties
